--- a/Loops.mkd
+++ b/Loops.mkd
@@ -9,21 +9,25 @@ For Loops are used when you want to run a loop for a specific duration.
 Exercise 5.11: Print each individual element in the list
 
 Example 1 -
-*  d =["banana", "apple", "microsoft"]
-*  for element in d:
-*     print (element)
-Example 2 -
-*  a = [3,10,-1]
-*  for element in a:
-*     print (element)
-*     print (element)
+### code 
 
-Example 5.21: Finding the sum of a list
-* b = [3,10,-1]
-* total = 0
-* for element in b:
-*     total = total + element
-* print (total)
+    d =["banana", "apple", "microsoft"]
+    for element in d:
+        print (element)
+Example 2 -
+### code
+    a = [3,10,-1]
+    for element in a:
+        print (element)
+        print (element)
+
+Exercise 5.12: Find the sum of a list
+### code
+    b = [3,10,-1]
+    total = 0
+    for element in b:
+        total = total + element
+    print (total)
 
 Example to find range of numbers
 range(1,5) #find the range of numbers from 1 to 5 not including 5
