--- a/Loops.mkd
+++ b/Loops.mkd
@@ -6,7 +6,7 @@ This chapter is an introduction to loops. Loops are used to run codes in a conti
 ## For loops 
 For Loops are used when you want to run a loop for a specific duration. 
 
-*Exercise 5.11: Print each individual element in the list
+*Exercise 5.11: Print each individual element in the list*
 
 Example 1 -
 ### code 
@@ -21,7 +21,7 @@ Example 2 -
         print (element)
         print (element)
 
-*Exercise 5.12: Find the sum of a list
+*Exercise 5.12: Find the sum of a list*
 Example 1
 ### code
     b = [3,10,-1]
@@ -82,17 +82,37 @@ print(totalToSub)
 ## while loops
 While loops use when you don't know how many loops you need beforehand. If the loop expression is True, then the indented code block is executed and the loops goes back to the beggining while loop statement. Then, the loop is executed again if the while loop statement remains true. If the statement is false, the  then execution instead proceeds to below the loop body.
 
-*Exercise 5. - Find total of (1 to 4)
+*Exercise 5. - Find total of (1 to 4).*
 
 Example 1 -
-
 ### code
     total6= 0
     j = 1
     while j < 5:
         total6 += j
     print(total6)
-*Exercise 5. - Draw a face using symbols
+ *Exercise 5. - Find sum of only the postive number of the given list of numbers. 
+ 
+ Example 1 - 
+ ### code
+    given_list = [5,4,4,3,1,-2,-3,-5]  #You only know that the numbers are sorted in a decending order.
+    total7 = 0
+    i = 0
+    while given_list[i] > 0:
+        total7 += given_list[i]
+        i += 1
+    print(total7)
+Example 2 - You don't have a negative number so the loop will be infinite. Therefore you need to add another condition.
+### code 
+    given_list1 = [5,4,4,3,1]
+    total8= 0
+    i=0
+    while i < len(given_list1) and given_list1[i] > 0:
+        total8+= given_list1[i]
+        i += 1
+    print(total8)
+
+*Exercise 5. - Draw a face using symbols*
 
 Example 1 -
 ### code
@@ -111,22 +131,8 @@ Example 1 -
 
     print('Goodbye.\n')
     
-given_list = [5,4,4,3,1,-2,-3,-5]  #find sum of only postive numbers
 
-total7 = 0
-i = 0
-while given_list[i] > 0:
-    total7 += given_list[i]
-    i += 1
-print(total7)
 
-given_list1 = [5,4,4,3,1]
-total8= 0
-i=0
-while i < len(given_list1) and given_list1[i] > 0:
-    total8+= given_list1[i]
-    i += 1
-print(total8)
 # using break statement to add only positive numbers
 given_list2 = [5,4,4,3,1,-2,-3,-5]
 total4 = 0
