--- a/CLASS_ASSIGNMENT_2.mkd
+++ b/CLASS_ASSIGNMENT_2.mkd
@@ -1,7 +1,7 @@
-# IF-ELSE CLASS ASSIGNMENT
+IF-ELSE CLASS ASSIGNMENT
 =========================
 
-##Problem 1:
+## Problem 1:
 
 Alien Colors #1: Imagine an alien was just shot down in a game.
 Create a variable called alien_color and assign it a value of 'green','yellow', or 'red’.
@@ -9,9 +9,36 @@ Create a variable called alien_color and assign it a value of 'green','yellow', 
 • Write an if statement to test whether the alien’s color is green. If it is, print a
 message that the player just earned 5 points.
 • Write one version of this program that passes the if test and another that
-fails. (The version that fails will have no output.) '''
+fails. (The version that fails will have no output.) 
+
 ### code 
-alien_color = 'green'
-#write if statement with a condition that alien color is green.
-if alien_color == 'green':
-    print('You have just earned 5 points!')
+    alien_color = 'green' #write if statement with a condition that alien color is green.
+    if alien_color == 'green':
+        print('You have just earned 5 points!')
+## Problem 1.2:
+### code
+    alien_color = 'red' #failing version
+    if alien_color == 'green':
+        print('You have just earned 5 points!')
+
+## Problem 2:
+Alien Colors #2: Choose a color for an alien as you did in problem 1, and write an if-else chain.
+
+• If the alien’s color is green, print a statement that the player just earned 5
+points for shooting the alien.
+• If the alien’s color isn’t green, print a statement that the player just earned 10
+points.
+• Write one version of this program that runs the if block and another that runs
+the else block.''
+### code for version 1
+    alien_color = 'red' #version 1: a version that runs the else block.
+    if alien_color == 'green':  #write an if statement with a condition that alien color is green.
+        print('You have just earned 5 points!')
+    else:
+        print('You have just earned 10 points!')
+ ### code for version 2
+    alien_color = 'green' #version 2: a version that runs the if block.
+    if alien_color == 'green': #write an if statement with a condition that alien color is green.
+        print('You have just earned 5 points!')
+    else:
+        print('You have just earned 10 points!')
