--- a/Loops.mkd
+++ b/Loops.mkd
@@ -1,7 +1,7 @@
 Introduction to Loops
 =====================
 
-This chapter is an introduction to loops. Loops are used to run codes in a continous cyle as long as the condition is true
+This chapter is an introduction to loops. Loops are used to run codes in a continous cyle as long as the condition is true.
 
 ## FOR LOOPS 
 For Loops are used when you want to run a loop for a specific duration. A for loop statement loops over each element in a container one at a time, assigning the next element to a variable that can then be used in the loop body.
@@ -93,8 +93,7 @@ ANOTHER WAY TO DO IT IS:
         if i % 3 == 0:
             total1 += i
     print(total1)
-ANOTHER WAY TO DO IT IS: 
-### code
+
     total2 = 0
     for i in range(1,100):
         if i % 5 == 0:
@@ -122,6 +121,17 @@ Example 1- print names in normal and then reverse order.
     print('\nPrinting in reverse:')
     for name in reversed(names):
         print(name, '|', end=' ')
+        
+*5.15 Counting using the range() function.*
+
+1. range(5)	= 0 1 2 3 4 #Every integer from 0 to 4.
+2. range(0, 5) = 0 1 2 3 4 #Every integer from 0 to 4.
+3. range(3, 7) = 3 4 5 6 #Every integer from 3 to 6.
+4. range(10, 13) = 10 11 12 #Every integer from 10 to 12.
+5. range(0, 5, 1) = 0 1 2 3 4 #Every 1 integers from 0 to 4.
+6. range(0, 5, 2) = 0 2 4 #Every 2 integers from 0 to 4.
+7. range(5, 0, -1) = 5 4 3 2 1 #Every 1 integers from 5 down to 1
+8. range(5, 0, -2) = 5 3 1 #Every 2 integers from 5 down to 1
 
 
 ## WHILE LOOPS
